[package]
name = "neqo-bench"
description = "Benchmarks for cross-implementation QUIC performance comparison."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
autobenches = false
publish = false

[lints]
workspace = true

[dev-dependencies]
criterion = { version = "4", package = "codspeed-criterion-compat", default-features = false }

[features]
bench = []

[package.metadata.cargo-machete]
ignored = ["criterion"]

[[package.metadata.bench]]
name = "perfcompare"
codspeed.mode = "walltime"
codspeed.memory = false

[[bench]]
name = "perfcompare"
harness = false
required-features = ["bench"]
